dev: Add api doc for update user profile info.
